// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/queries/getProposals Gets called with correct default arguments 1`] = `
Object {
  "limit": 5,
  "page": 1,
  "stakeHistories": Array [
    Object {
      "address": "0x0000000000000000000000000000000000000000",
      "amount": "11075000000000000000",
      "block_hash": "0x7d6991ef8f031e9cdc4ced2f924dee008e505c741f169101124aee16dad795f1",
      "created_at": 2022-12-14T19:04:11.000Z,
      "id": 291,
      "price": "0.033695332045177356",
      "reward": "0",
      "tx_hash": "0xf97a7673403a643ad23edb9ffa4c60bf4192998aaf436782240b84be94d3aba1",
      "type": 0,
      "updated_at": 2022-12-14T19:04:11.000Z,
    },
  ],
  "total": 1,
}
`;

exports[`api/queries/getProposals returns formatted proposals 1`] = `
Object {
  "limit": 5,
  "page": 1,
  "stakeHistories": Array [
    Object {
      "address": "0x0000000000000000000000000000000000000000",
      "amount": "11075000000000000000",
      "block_hash": "0x7d6991ef8f031e9cdc4ced2f924dee008e505c741f169101124aee16dad795f1",
      "created_at": 2022-12-14T19:04:11.000Z,
      "id": 291,
      "price": "0.033695332045177356",
      "reward": "0",
      "tx_hash": "0xf97a7673403a643ad23edb9ffa4c60bf4192998aaf436782240b84be94d3aba1",
      "type": 0,
      "updated_at": 2022-12-14T19:04:11.000Z,
    },
  ],
  "total": 1,
}
`;

exports[`api/queries/getStakeHistories Gets called with correct default arguments 1`] = `
Object {
  "limit": 6,
  "page": 1,
  "stakeHistories": Array [
    Object {
      "address": "0xca343afaf6f9193e232e46a074b481aeea548e59",      
      "amount": "11071000000000000000",
      "block_hash": "0x7d6991ef8f031e9cdc4ced2f924dee008e505c741f169101124aee16dad795f0",
      "created_at": "2022-12-14T19:04:11.000Z",
      "id": 291,
      "price": "0.033695332045177356",
      "reward": "0",
      "tx_hash": "0xf97a7673403a643ad23edb9ffa4c60bf4192998aaf436782240b84be94d3aba2",
      "type": 0,
      "updated_at": "2022-12-14T19:04:11.000Z"
    }
  ],
  "total": 1,
}
`;

exports[`api/queries/getStakeHistories returns formatted history 1`] = `
Object {
  "limit": 6,
  "page": 1,
  "stakeHistories": Array [
    Object {
      "address": "0xca343afaf6f9193e232e46a074b481aeea548e59",      
      "amount": "11071000000000000000",
      "block_hash": "0x7d6991ef8f031e9cdc4ced2f924dee008e505c741f169101124aee16dad795f0",
      "created_at": "2022-12-14T19:04:11.000Z",
      "id": 291,
      "price": "0.033695332045177356",
      "reward": "0",
      "tx_hash": "0xf97a7673403a643ad23edb9ffa4c60bf4192998aaf436782240b84be94d3aba2",
      "type": 0,
      "updated_at": "2022-12-14T19:04:11.000Z"
    }
  ],
  "total": 1,
}
`;
